Updated View results heading

--- a/plots/index.html
+++ b/plots/index.html
@@ -28,7 +28,7 @@ limitations under the License.
 <body>
   <script src="./out/generatedResults.js"></script>
   <nav>
-    View results:
+    View latest results:
     <a>grouped by metric</a>
     <a href="./metrics-per-site.html">grouped by site</a>
   </nav>
